--- a/01-Javascript/Kuis/02 Struktur data/02 array.html
+++ b/01-Javascript/Kuis/02 Struktur data/02 array.html
@@ -1,10 +1,18 @@
+<script>
 /**
-* TODO:
-* Buatlah sebuah variabel dengan nama evenNumber yang merupakan sebuah array dengan ketentuan:
-* - Array tersebut menampung bilangan genap dari 1 hingga 100
-*
-* Catatan:
-* - Agar lebih mudah, gunakanlah for loop dan logika if untuk mengisi bilangan genap pada array.
-*/
+ * TODO:
+ * Buatlah sebuah variabel dengan nama evenNumber yang merupakan sebuah array dengan ketentuan:
+ *   - Array tersebut menampung bilangan genap dari 1 hingga 100
+ *
+ * Catatan:
+ *   - Agar lebih mudah, gunakanlah for loop dan logika if untuk mengisi bilangan genap pada array.
+ */
 
 // Tulis kode di bawah ini
+const evenNumber = [];
+
+for (let i = 1;i < 101; i++){
+    if(i%2 == 0 ) evenNumber.push(i);
+}
+console.log(evenNumber);
+</script>
