kuis 3-1 function done

--- a/01-Javascript/Kuis/03 Function/01 kuis-function.html
+++ b/01-Javascript/Kuis/03 Function/01 kuis-function.html
@@ -22,13 +22,20 @@
  */
 
 // Tulis kode di bawah ini
-function minimal(a,b){
-    if(a < b) return a;
-    else if(a > b) return b;
-    else if(a==b) return a;
+// function minimal(a,b){
+//     if(a < b) return a;
+//     else if(a > b) return b;
+//     else if(a==b) return a;
+// }
+
+// findIndex = (array, number)=>{
+//     return array.indexOf(number);
+// }
+function multiply(num) {
+    total = num * num;
 }
 
-findIndex = (array, number)=>{
-    return array.indexOf(number);
-}
+const result = multiply(3);
+
+console.log(result);
 </script>
